[tool.poetry]
name = "glacier-helper-python"
version = "0.1.0"
description = ""
authors = ["riccione"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
